--- a/src/app/coursetrain/coursetrain.component.html
+++ b/src/app/coursetrain/coursetrain.component.html
@@ -2,7 +2,7 @@
 
     <div class="col-12">
         <div class=" flex justify-content-center">
-          <h2>เพิ่มกล้ามเนื้อ</h2>
+          <h2>เพิ่มความแข็งแรง</h2>
         </div>
     </div>
 
@@ -25,6 +25,52 @@
                 </div>
 
                 <p-divider class="flex justify-content-center gap-2 mt-4" type="solid" />
+
+                <div class=" flex justify-content-center ">
+                    <h2 class="font-color">รายละเอียด</h2>
+                </div>
+                <P>โปรแกรมฝึกเพื่อเพิ่มความแข็งแรงของกล้ามเนื้อกดเ่ก่กน่นกด่เกเนยก่ฟสวาส่หสา่ดห่กด่รนหกห่นด่หนก่ดรนห่กรนด่หนก่ดหก่ดนรห่กนรห
+                    หกดนยหรดกนยหยกดนยหรดนยหกนยดรหนยกรดนยหรดนยหดนยหดนยหกนยหกานยดหกด
+                    หดนยหกดนยหกนดหยนย่กดกน้อสนดหสดยนหดหาหยานย
+                </P>
+
+                <p-divider class="flex justify-content-center gap-2 mt-4" type="solid" />
+
+                <div class=" flex justify-content-center ">
+                    <h2 class="font-color">ตารางเวลาของคอร์ส</h2>
+                </div>
+
+                <p class="font grid justify-content-center gap-2 mt-4">วันจันทร์ 17.00 - 18.00 น.</p>
+
+                <div class="margin margin-top-30px">
+                    <div class="item-center text-center">
+                      <p-button
+                        label="ลงทะเบียน"
+                        styleClass="custom-button-blue-login"
+                        (click)="visibleModal=false"
+                      ></p-button>
+                    </div>
+                </div>
+            </div>
+            <div class="background-156">
+                <div class="content">
+                  <div>
+                    <h3 class="text-left-underline">เกี่ยวกับพวกเรา</h3>
+                    <p>เกี่ยวกับเรา</p>
+                    <p>ติดต่อเรา</p>
+                    <p>ทำไมต้องเลือกเรา</p>
+                  </div>
+                </div>
+          
+                <div class="content">
+                  <div>
+                    <h3 class="text-left-underline">สมาชิก</h3>
+                    <p>สิทธิพิเศษของสมาชิก</p>
+                    <p>กฎระเบียบการใช้งาน</p>
+                    <p>โปรโมชั่น</p>
+                    <p>สมัครสมาชิก</p>
+                  </div>
+                </div>
             </div>
         </div>
     </div>
