--- a/src/app/training/training.component.html
+++ b/src/app/training/training.component.html
@@ -324,6 +324,47 @@
                         </div>
                     </div>
                 </div>
+
+                <p-divider type="solid" />
+
+                <div class=" flex justify-content-center pt-5 ">
+                    <h2 class="font-color">VIP</h2>
+                </div>
+
+                <div class="grid">
+                    <div class="col-6">
+                        <div class="text-center p-4 border-round-top-3xl ">
+                            <div class="card flex justify-content-center">
+                                <p-card header="เพิ่มกล้ามเนื้อ" subheader="BODYPUMP" [style]="{ width: '150px' }">
+                                    <ng-template pTemplate="header">
+                                        <img alt="Card" src="https://primefaces.org/cdn/primeng/images/card-ng.jpg" />
+                                    </ng-template>
+                                    <ng-template pTemplate="footer">
+                                        <div class="flex justify-content-center gap-2 mt-4">
+                                            <p-button label="สมัคร" styleClass="button-training " />
+                                        </div>
+                                    </ng-template>
+                                </p-card>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="text-center p-4 border-round-top-3xl ">
+                            <div class="card flex justify-content-center">
+                                <p-card header="เพิ่มกล้ามเนื้อ" subheader="BODYPUMP" [style]="{ width: '150px' }">
+                                    <ng-template pTemplate="header">
+                                        <img alt="Card" src="https://primefaces.org/cdn/primeng/images/card-ng.jpg" />
+                                    </ng-template>
+                                    <ng-template pTemplate="footer">
+                                        <div class="flex justify-content-center gap-2 mt-4">
+                                            <p-button label="สมัคร" styleClass="button-training " />
+                                        </div>
+                                    </ng-template>
+                                </p-card>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 
                 <p-divider type="solid" />
 
