--- a/src/styles.scss
+++ b/src/styles.scss
@@ -574,6 +574,7 @@ label {
 .font{
   justify-content: center; /* จัดให้อยู่กลางแนวนอน */
   font-weight: bold;
+  font-size: 14px;
 }
 
 .cancel-button {
@@ -604,4 +605,3 @@ label {
 .header-dialog h2 {
   margin-top: 0; /* ลดระยะห่างด้านบนของ h2 */
 }
-
