--- a/src/app/logo/logo.component.html
+++ b/src/app/logo/logo.component.html
@@ -13,6 +13,7 @@
         <p-button
           label="Login"
           styleClass="custom-button-blue-login"
+          (click)="goLogin()"
         ></p-button>
       </div>
     </div>
@@ -22,6 +23,7 @@
         <p-button
           label="Sign Up"
           styleClass="custom-button-white-signup"
+          (click)="goSignup()"
         ></p-button>
       </div>
     </div>
