--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -70,6 +70,7 @@
               [text]="true"
               [raised]="true"
               class="custom-button-red"
+              (click)="gotraining()"
             />
           </div>
         </p-card>
