--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -109,8 +109,8 @@
                 ><br />
               </p>
               <p>
-                วันที่จอง <strong>:</strong>
-                {{ rental.rental_date | date : "dd-MM-yyyy" }}
+                วัน <strong>:</strong>
+                {{ rental.rental_date }}
                 <br />
               </p>
               <p>
