--- a/src/app/calfood/calfood.component.html
+++ b/src/app/calfood/calfood.component.html
@@ -278,29 +278,35 @@
       </div>
     </div>
 
-    <mat-grid-list cols="3" rowHeight="1:2">
-      <mat-grid-tile>
+  <p-splitter [panelSizes]="[33, 33, 33]" [style]="{ height: '300px', border: 'none' }" styleClass="mb-5" [gutterSize]="0">
+    <ng-template pTemplate>
+        <div style="display: flex; align-items: center; justify-content: center; width: 100%; height: 100%;">
           <div class="tile-content">
             <img src="assets/PNG/optigold.png" class="tile-image" />
             <p class="tile-text">Optimum Nutrition Gold<br>
                 <strong>2800 ฿</strong></p>
           </div>
-      </mat-grid-tile>
-      <mat-grid-tile>
-          <div class="tile-content">
-              <img src="assets/PNG/optigold.png" class="tile-image" />
-              <p class="tile-text">Optimum Nutrition Gold<br>
-                  <strong>2800 ฿</strong></p>
-          </div>
-      </mat-grid-tile>
-      <mat-grid-tile>
+        </div>
+    </ng-template>
+    <ng-template pTemplate>
+        <div style="display: flex; align-items: center; justify-content: center; width: 100%; height: 100%;">
           <div class="tile-content">
             <img src="assets/PNG/optigold.png" class="tile-image" />
             <p class="tile-text">Optimum Nutrition Gold<br>
                 <strong>2800 ฿</strong></p>
           </div>
-      </mat-grid-tile>
-  </mat-grid-list>
+        </div>
+    </ng-template>
+    <ng-template pTemplate>
+      <div style="display: flex; align-items: center; justify-content: center; width: 100%; height: 100%;">
+        <div class="tile-content">
+          <img src="assets/PNG/optigold.png" class="tile-image" />
+          <p class="tile-text">Optimum Nutrition Gold<br>
+              <strong>2800 ฿</strong></p>
+        </div>
+      </div>
+    </ng-template>
+  </p-splitter>
 
   </div>
   <div class="background-156">
