--- a/src/styles.scss
+++ b/src/styles.scss
@@ -105,6 +105,14 @@ body {
 .text-center {
   text-align: center;
 }
+
+.text-center-bold {
+  text-align: center;
+  font-weight: bold;
+  color: #333; /* เปลี่ยนสีตัวอักษรตามต้องการ */
+  font-size: 20px;
+}
+
 .png {
   width: 43vw; /* ปรับขนาดความกว้างให้เป็น 80% ของความกว้างหน้าจอ */
   height: auto; /* ปรับขนาดความสูงตามอัตราส่วนของรูปภาพ */
@@ -378,6 +386,7 @@ body {
 
 .text-left {
   text-align: left;
+  font-size: 17px;
   font-weight: bold;
   color: #333; /* เปลี่ยนสีตัวอักษรตามต้องการ */
 }
@@ -402,15 +411,14 @@ body {
   display: flex;
   font-weight: bold;
   color: #FA1A1A;
-  font-size: 20px;
+  font-size: 17px;
   margin-left: auto;
 }
 
 .text-right3 {
   display: flex;
-  font-weight: bold;
   color: #333;
-  font-size: 20px;
+  font-size: 17px;
   margin-left: auto;
 }
 
@@ -447,10 +455,6 @@ body {
 .item-center {
   justify-content: center;
   justify-items: center;
-}
-
-.text-center {
-  text-align: center;
 }
 
 .galleria-image {
