ล่าสุด menu and layout

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,8 @@
 <div class="grid container h-screen">
-  <div>
-    <div class="content item-center text-center">
-      <h1 class="text-white">Login</h1>
+    <div class="col-12">
+      <div class="text-center font-bold text-white center">
+        <h2>Login</h2>
+      </div>
     </div>
 
     <div class="margin bg-white bg-login h-screen h-full">
@@ -11,7 +12,7 @@
           <div class="margin">
             <div class="flex flex-column">
               <label for="desc"><strong>Username</strong></label
-              ><br />
+              >
               <input
                 type="text"
                 pInputText
@@ -21,10 +22,11 @@
             </div>
           </div>
 
+
           <div class="margin">
             <div class="flex flex-column">
               <label for="desc"><strong>Password</strong></label
-              ><br />
+              >
               <input
                 type="text"
                 pInputText
@@ -95,5 +97,5 @@
       </div>
     </div>
 
-  </div>
+
 </div>
