--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,6 +1,13 @@
 <div class="grid container h-screen">
-  <div class="content item-center center text-white">
-    <h2>บัญชีผู้ใช้</h2>
+
+  <div class="col-12">
+    <div><app-menu [name]="name"></app-menu></div>
+  </div>
+
+  <div class="col-12">
+    <div class=" text-center font-bold text-white center">
+      <h2>บัญชีผู้ใช้</h2>
+    </div>
   </div>
 
   <div class="col-12 p-4 border-round-top-3xl surface-0 h-screen">
