--- a/src/app/singup/singup.component.html
+++ b/src/app/singup/singup.component.html
@@ -1,8 +1,10 @@
-<div class="container bg-red">
-  <div>
-    <div class="content item-center text-center">
-      <h1 class="text-white">Sign Up</h1>
+<div class="grid container h-screen">
+  <div class="col-12">
+    <div class="text-center font-bold text-white center">
+      <h2>Sign Up</h2>
     </div>
+  </div>
+  
 
     <div class="margin bg-white bg-login">
       <div class="margin">
@@ -10,8 +12,7 @@
         <form [formGroup]="signUp" class="flex flex-column">
           <div class="margin">
             <div class="flex flex-column">
-              <label for="desc"><strong>Username</strong></label
-              ><br />
+              <label for="desc"><strong>Username</strong></label>
               <input
                 type="text"
                 pInputText
@@ -24,8 +25,7 @@
 
           <div class="margin">
             <div class="flex flex-column">
-              <label for="desc"><strong>Phone number</strong></label
-              ><br />
+              <label for="desc"><strong>Phone number</strong></label>
               <input
                 type="text"
                 pInputText
@@ -37,9 +37,8 @@
           </div>
 
           <div class="margin">
-            <div class="flex flex-column">
-              <label for="desc"><strong>Email</strong></label
-              ><br />
+            <div class="flex flex-column ">
+              <label for="desc"><strong>Email</strong></label>
               <input
                 type="text"
                 pInputText
@@ -52,8 +51,7 @@
 
           <div class="margin">
             <div class="flex flex-column">
-              <label for="desc"><strong>Password</strong></label
-              ><br />
+              <label for="desc"><strong>Password</strong></label>
               <input
                 type="text"
                 pInputText
@@ -172,5 +170,5 @@
         </p-dialog>
       </div>
     </div>
-  </div>
+
 </div>
