--- a/src/app/coursetrain/coursetrain.component.html
+++ b/src/app/coursetrain/coursetrain.component.html
@@ -1,10 +1,14 @@
 <div class="grid container h-screen">
 
-    <div class="col-12">
-        <div class=" flex justify-content-center">
-          <h2>เพิ่มความแข็งแรง</h2>
-        </div>
+  <div class="col-12">
+    <div><app-menu [name]="name"></app-menu></div>
+  </div>
+
+  <div class="col-12">
+    <div class=" text-center font-bold text-white center">
+      <h2>เพิ่มความแข็งแรง</h2>
     </div>
+  </div>
 
     <div class="col-12">
         <div class="grid">
