--- a/src/app/program-information/program-information.component.html
+++ b/src/app/program-information/program-information.component.html
@@ -1,60 +1,64 @@
-<div class="container bg-red item-center">
-    <!-- <div>
-        <p-menubar [model]="items" class="container bg-image h-screen h-full">
-          <img src="assets/PNG/Logo.png" class="logo" />
-        </p-menubar>
-      </div> -->
-    <div class="content item-center center text-white">
-        <h2>คอสออกกำลังกาย</h2>
+<div class="grid container h-screen">
+    
+    <div class="col-12">
+        <div><app-menu [name]="name"></app-menu></div>
+    </div> 
+    
+    <div class="col-12">
+        <div class="text-center font-bold text-white center">
+          <h2>คอร์สออกกำลังกาย</h2>
+        </div>
     </div>
 
-    <div class="bg-white width-100">
-        &nbsp;
-        <div class="contentlogo item-center">
-            <div class="contentlogo">
-                <img src="assets/PNG/programInfo.jpg" class="png" style="width: 350px; height: auto;" />
-            </div>
-        </div>
-
-        <div class="item-center content">
-            <div class="content text-center">
-                <p-card p-card class="font-card">
-                    <h2>คอสออกกำลังกาย ช่วยอะไร?</h2>
-                    <p style="color: black;">
-                        โปรแกรมออกกำลังกายนี้ถูกออกแบบมาเพื่อตอบสนองเป้าหมายที่หลากหลาย ไม่ว่าจะเป็นการเพิ่มกล้ามเนื้อ,
-                        การลดไขมัน หรือการรักษามวลกล้ามเนื้อ จะช่วยเพิ่มมวลกล้ามเนื้อและเสริมสร้างความแข็งแรง
-                        การฝึกแบบเข้มข้นสลับเบาจะช่วยเผาผลาญไขมันและควบคุมการลดน้ำหนักได้อย่างมีประสิทธิภาพ
-                        สำหรับผู้ที่ต้องการรักษากล้ามเนื้อ
-                        โปรแกรมนี้ยังรวมถึงการออกกำลังกายที่ช่วยรักษามวลกล้ามเนื้อและความแข็งแรงโดยไม่กระทบกับเป้าหมายการลดน้ำหนัก
-                        มีโค้ชผู้เชี่ยวชาญคอยให้คำแนะนำตลอดการฝึกเพื่อให้คุณบรรลุเป้าหมายทั้ง 3
-                        อย่างอย่างสมดุลและมีประสิทธิภาพ</p>
-                    <div class="button-card card">
-                        <p-button label="กลับหน้าหลัก" [text]="true" [raised]="true" severity="secondary"
-                            (click)="gohome()" class="custom-button-white" />
-                        <p-button label="ทดลอง" [text]="true" [raised]="true" class="custom-button-red" />
+    <div class="col-12">
+        <div class="grid">
+            <div class="col-12 p-4 border-round-top-3xl surface-0 h-screen">
+                &nbsp;
+                <div class="contentlogo item-center">
+                    <div class="contentlogo">
+                        <img src="assets/PNG/programInfo.jpg" class="png" style="width: 350px; height: auto;" />
                     </div>
-                </p-card>
-            </div>
-        </div>
-
-
-        <div class="background-156">
-            <div class="content">
-                <div>
-                    <h3 class="text-left-underline">เกี่ยวกับพวกเรา</h3>
-                    <p>เกี่ยวกับเรา</p>
-                    <p>ติดต่อเรา</p>
-                    <p>ทำไมต้องเลือกเรา</p>
+                </div>
+        
+                <div class="item-center content">
+                    <div class="content text-center">
+                        <p-card p-card class="font-card">
+                            <h2>คอสออกกำลังกาย ช่วยอะไร?</h2>
+                            <p style="color: black;">
+                                โปรแกรมออกกำลังกายนี้ถูกออกแบบมาเพื่อตอบสนองเป้าหมายที่หลากหลาย ไม่ว่าจะเป็นการเพิ่มกล้ามเนื้อ,
+                                การลดไขมัน หรือการรักษามวลกล้ามเนื้อ จะช่วยเพิ่มมวลกล้ามเนื้อและเสริมสร้างความแข็งแรง
+                                การฝึกแบบเข้มข้นสลับเบาจะช่วยเผาผลาญไขมันและควบคุมการลดน้ำหนักได้อย่างมีประสิทธิภาพ
+                                สำหรับผู้ที่ต้องการรักษากล้ามเนื้อ
+                                โปรแกรมนี้ยังรวมถึงการออกกำลังกายที่ช่วยรักษามวลกล้ามเนื้อและความแข็งแรงโดยไม่กระทบกับเป้าหมายการลดน้ำหนัก
+                                มีโค้ชผู้เชี่ยวชาญคอยให้คำแนะนำตลอดการฝึกเพื่อให้คุณบรรลุเป้าหมายทั้ง 3
+                                อย่างอย่างสมดุลและมีประสิทธิภาพ</p>
+                            <div class="button-card card">
+                                <p-button label="กลับหน้าหลัก" [text]="true" [raised]="true" severity="secondary"
+                                    (click)="gohome()" class="custom-button-white" />
+                                <p-button label="ทดลอง" [text]="true" [raised]="true" class="custom-button-red" />
+                            </div>
+                        </p-card>
+                    </div>
                 </div>
             </div>
+            <div class="background-156">
+                <div class="content">
+                    <div>
+                        <h3 class="text-left-underline">เกี่ยวกับพวกเรา</h3>
+                        <p>เกี่ยวกับเรา</p>
+                        <p>ติดต่อเรา</p>
+                        <p>ทำไมต้องเลือกเรา</p>
+                    </div>
+                </div>
 
-            <div class="content">
-                <div>
-                    <h3 class="text-left-underline">สมาชิก</h3>
-                    <p>สิทธิพิเศษของสมาชิก</p>
-                    <p>กฎระเบียบการใช้งาน</p>
-                    <p>โปรโมชั่น</p>
-                    <p>สมัครสมาชิก</p>
+                <div class="content">
+                    <div>
+                        <h3 class="text-left-underline">สมาชิก</h3>
+                        <p>สิทธิพิเศษของสมาชิก</p>
+                        <p>กฎระเบียบการใช้งาน</p>
+                        <p>โปรโมชั่น</p>
+                        <p>สมัครสมาชิก</p>
+                    </div>
                 </div>
             </div>
         </div>
