กำหนดรูปหน้า profile(เหลือรป product)

--- a/src/app/coursetrain/coursetrain.component.html
+++ b/src/app/coursetrain/coursetrain.component.html
@@ -10,7 +10,7 @@
       <div class="col-12 p-4 border-round-top-3xl surface-0 h-screen">
         <div class="grid flex flex-column justify-content-center">
           <p-image
-            src="https://images.pexels.com/photos/414029/pexels-photo-414029.jpeg?cs=srgb&dl=pexels-pixabay-414029.jpg&fm=jpg"
+            src="{{ this.state.src }}"
             alt="Image"
             width="60%"
           >
