--- a/src/app/training/training.component.html
+++ b/src/app/training/training.component.html
@@ -58,7 +58,7 @@
                   <ng-template pTemplate="footer">
                     <div class="flex justify-content-center gap-2 mt-4">
                       <p-button label="สมัคร" styleClass="button-training"
-                      (click)="goPageCoursetrain('เพิ่มกล้ามเนื้อ',5)"
+                      (click)="goPageCoursetrain('เพิ่มกล้ามเนื้อ',5,'assets/program/Picture5.jpg')"
                       />
                     </div>
                   </ng-template>
@@ -82,7 +82,7 @@
                   <ng-template pTemplate="footer">
                     <div class="flex justify-content-center gap-2 mt-4">
                       <p-button label="สมัคร" styleClass="button-training"
-                      (click)="goPageCoursetrain('เพิ่มกล้ามเนื้อ',8)"
+                      (click)="goPageCoursetrain('เพิ่มกล้ามเนื้อ',8,'assets/program/Picture8.jpg')"
                       />
                     </div>
                   </ng-template>
@@ -106,7 +106,7 @@
                   <ng-template pTemplate="footer">
                     <div class="flex justify-content-center gap-2 mt-4">
                       <p-button label="สมัคร" styleClass="button-training"
-                      (click)="goPageCoursetrain('เพิ่มกล้ามเนื้อ',10)"
+                      (click)="goPageCoursetrain('เพิ่มกล้ามเนื้อ',10,'assets/program/Picture10.jpg')"
                       />
                     </div>
                   </ng-template>
@@ -125,12 +125,12 @@
                     <img
                       alt="Card"
                       src="assets/program/Picture12.jpg"
-                      (click)="goPageCoursetrain('เพิ่มกล้ามเนื้อ',12)"
                     />
                   </ng-template>
                   <ng-template pTemplate="footer">
                     <div class="flex justify-content-center gap-2 mt-4">
                       <p-button label="สมัคร" styleClass="button-training "
+                      (click)="goPageCoursetrain('เพิ่มกล้ามเนื้อ',12,'assets/program/Picture12.jpg')"
                       />
                     </div>
                   </ng-template>
@@ -158,12 +158,12 @@
                     <img
                       alt="Card"
                       src="assets/program/Picture2.jpg"
-                      (click)="goPageCoursetrain('ลดไข้มัน',2)"
                     />
                   </ng-template>
                   <ng-template pTemplate="footer">
                     <div class="flex justify-content-center gap-2 mt-4">
                       <p-button label="สมัคร" styleClass="button-training"
+                      (click)="goPageCoursetrain('ลดไข้มัน',2,'assets/program/Picture2.jpg')"
                       />
                     </div>
                   </ng-template>
@@ -187,7 +187,7 @@
                   <ng-template pTemplate="footer">
                     <div class="flex justify-content-center gap-2 mt-4">
                       <p-button label="สมัคร" styleClass="button-training"
-                      (click)="goPageCoursetrain('ลดไข้มัน',4)"
+                      (click)="goPageCoursetrain('ลดไข้มัน',4,'assets/program/Picture4.jpg')"
                       />
                     </div>
                   </ng-template>
@@ -211,7 +211,7 @@
                   <ng-template pTemplate="footer">
                     <div class="flex justify-content-center gap-2 mt-4">
                       <p-button label="สมัคร" styleClass="button-training"
-                      (click)="goPageCoursetrain('ลดไข้มัน',6)"
+                      (click)="goPageCoursetrain('ลดไข้มัน',6,'assets/program/Picture6.jpg')"
 
                       />
                     </div>
@@ -236,7 +236,7 @@
                   <ng-template pTemplate="footer">
                     <div class="flex justify-content-center gap-2 mt-4">
                       <p-button label="สมัคร" styleClass="button-training"
-                      (click)="goPageCoursetrain('ลดไข้มัน',11)"
+                      (click)="goPageCoursetrain('ลดไข้มัน',11,'assets/program/Picture11.jpg')"
                       />
                     </div>
                   </ng-template>
@@ -269,7 +269,7 @@
                   <ng-template pTemplate="footer">
                     <div class="flex justify-content-center gap-2 mt-4">
                       <p-button label="สมัคร" styleClass="button-training"
-                      (click)="goPageCoursetrain('น้ำหนักคงสภาพ',1)"
+                      (click)="goPageCoursetrain('น้ำหนักคงสภาพ',1,'assets/program/Picture1.jpg')"
                       />
                     </div>
                   </ng-template>
@@ -293,7 +293,7 @@
                   <ng-template pTemplate="footer">
                     <div class="flex justify-content-center gap-2 mt-4">
                       <p-button label="สมัคร" styleClass="button-training"
-                      (click)="goPageCoursetrain('น้ำหนักคงสภาพ',7)"
+                      (click)="goPageCoursetrain('น้ำหนักคงสภาพ',7,'assets/program/Picture7.jpg')"
                       />
                     </div>
                   </ng-template>
@@ -317,7 +317,7 @@
                   <ng-template pTemplate="footer">
                     <div class="flex justify-content-center gap-2 mt-4">
                       <p-button label="สมัคร" styleClass="button-training"
-                      (click)="goPageCoursetrain('น้ำหนักคงสภาพ',9)"
+                      (click)="goPageCoursetrain('น้ำหนักคงสภาพ',9,'assets/program/Picture9.jpg')"
                       />
                     </div>
                   </ng-template>
@@ -341,7 +341,7 @@
                   <ng-template pTemplate="footer">
                     <div class="flex justify-content-center gap-2 mt-4">
                       <p-button label="สมัคร" styleClass="button-training"
-                      (click)="goPageCoursetrain('น้ำหนักคงสภาพ',3)"
+                      (click)="goPageCoursetrain('น้ำหนักคงสภาพ',3,'assets/program/Picture3.jpg')"
                       />
                     </div>
                   </ng-template>
@@ -374,7 +374,7 @@
                   <ng-template pTemplate="footer">
                     <div class="flex justify-content-center gap-2 mt-4">
                       <p-button label="สมัคร" styleClass="button-training"
-                      (click)="goPageCoursetrain('พรีเมี่ยม',13)"
+                      (click)="goPageCoursetrain('พรีเมี่ยม',13,'assets/program/Picture13.jpg')"
                       />
                     </div>
                   </ng-template>
@@ -398,7 +398,7 @@
                   <ng-template pTemplate="footer">
                     <div class="flex justify-content-center gap-2 mt-4">
                       <p-button label="สมัคร" styleClass="button-training"
-                      (click)="goPageCoursetrain('พรีเมี่ยม',14)"
+                      (click)="goPageCoursetrain('พรีเมี่ยม',14,'assets/program/Picture14.jpg')"
                       />
                     </div>
                   </ng-template>
