--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -151,7 +151,7 @@
               "
             >
               <img
-                [src]="getImagePath(enrollment.program_id)"
+                [src]="getImageProgram(enrollment.program_id)"
                 style="max-width: 100%; max-height: 100%; object-fit: cover"
               />
             </div>
